--- a/0-courses.html
+++ b/0-courses.html
@@ -66,9 +66,7 @@
           class="navbar-toggler custom-toggler"
           type="button"
           data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
+          data-target="#navbarNav
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
